# Cpp_Boost_Interprocess_Example

./: .gitignore  CMakeLists.txt  README.txt  README.txt.bak
prog_1/: CMakeLists.txt  main.cpp
prog_2/: CMakeLists.txt  main.cpp
